修复商品无法删除bug
